5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1838_2603.log
== TEST (2019-06-24 23:02:56) 
-- CODE:
from numpy import*
m = array(eval(input("M:")))

for i in range(shape(m)[0]):
	print(max(m[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 23:03:08) 
-- CODE:
from numpy import*
m = array(eval(input("M:")))

for i in range(shape(m)[0]):
	print(max(m[i,:]))
-- EXECUTION TIME:
1.03363
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
1
2
3
4
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
4
3
3
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 23:04:08) 
-- CODE:
from numpy import*
m = array(eval(input("M:")))

for i in range(shape(m)[0]):
	print(max(m[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 23:04:35) 
-- CODE:
from numpy import*
m = array(eval(input("M:")))

for i in range(shape(m)[0]):
	print(max(m[i,:]))
-- EXECUTION TIME:
1.21896
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
1
2
3
4
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
4
3
3
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 09:53:13) 
-- CODE:
from numpy import*
m = array(eval(input("M:")))

for i in range(shape(m)[0]):
	print(max(m[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 09:53:17) 
-- CODE:
from numpy import*
m = array(eval(input("M:")))

for i in range(shape(m)[0]):
	print(max(m[i,:]))
-- EXECUTION TIME:
1.20757
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
1
2
3
4
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
4
3
3
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:31:54) 
-- CODE:
from numpy import*

m = array(eval(input(m:)))
v = zeros((len(m)), dtype = int)
for i in range(len(m)):
	for j in range(len(m)):
		v[j]= m[j][i]
		v = sorted(v, reverse = True)
		for j in range(len(m)):
			m[j][i] = v[j]
print(m)
		
		
	
		

		
-- ERROR:
File "XXXX", line 3
    m = array(eval(input(m:)))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:31:54) 
-- CODE:
from numpy import*

m = array(eval(input(m:)))
v = zeros((len(m)), dtype = int)
for i in range(len(m)):
	for j in range(len(m)):
		v[j]= m[j][i]
		v = sorted(v, reverse = True)
		for j in range(len(m)):
			m[j][i] = v[j]
print(m)
		
		
	
		

		
-- ERROR:
File "XXXX", line 3
    m = array(eval(input(m:)))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:31:54) 
-- CODE:
from numpy import*

m = array(eval(input(m:)))
v = zeros((len(m)), dtype = int)
for i in range(len(m)):
	for j in range(len(m)):
		v[j]= m[j][i]
		v = sorted(v, reverse = True)
		for j in range(len(m)):
			m[j][i] = v[j]
print(m)
		
		
	
		

		
-- ERROR:
File "XXXX", line 3
    m = array(eval(input(m:)))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:31:55) 
-- CODE:
from numpy import*

m = array(eval(input(m:)))
v = zeros((len(m)), dtype = int)
for i in range(len(m)):
	for j in range(len(m)):
		v[j]= m[j][i]
		v = sorted(v, reverse = True)
		for j in range(len(m)):
			m[j][i] = v[j]
print(m)
		
		
	
		

		
-- ERROR:
File "XXXX", line 3
    m = array(eval(input(m:)))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:31:55) 
-- CODE:
from numpy import*

m = array(eval(input(m:)))
v = zeros((len(m)), dtype = int)
for i in range(len(m)):
	for j in range(len(m)):
		v[j]= m[j][i]
		v = sorted(v, reverse = True)
		for j in range(len(m)):
			m[j][i] = v[j]
print(m)
		
		
	
		

		
-- ERROR:
File "XXXX", line 3
    m = array(eval(input(m:)))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:31:55) 
-- CODE:
from numpy import*

m = array(eval(input(m:)))
v = zeros((len(m)), dtype = int)
for i in range(len(m)):
	for j in range(len(m)):
		v[j]= m[j][i]
		v = sorted(v, reverse = True)
		for j in range(len(m)):
			m[j][i] = v[j]
print(m)
		
		
	
		

		
-- ERROR:
File "XXXX", line 3
    m = array(eval(input(m:)))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:31:55) 
-- CODE:
from numpy import*

m = array(eval(input(m:)))
v = zeros((len(m)), dtype = int)
for i in range(len(m)):
	for j in range(len(m)):
		v[j]= m[j][i]
		v = sorted(v, reverse = True)
		for j in range(len(m)):
			m[j][i] = v[j]
print(m)
		
		
	
		

		
-- ERROR:
File "XXXX", line 3
    m = array(eval(input(m:)))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:31:55) 
-- CODE:
from numpy import*

m = array(eval(input(m:)))
v = zeros((len(m)), dtype = int)
for i in range(len(m)):
	for j in range(len(m)):
		v[j]= m[j][i]
		v = sorted(v, reverse = True)
		for j in range(len(m)):
			m[j][i] = v[j]
print(m)
		
		
	
		

		
-- ERROR:
File "XXXX", line 3
    m = array(eval(input(m:)))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:31:55) 
-- CODE:
from numpy import*

m = array(eval(input(m:)))
v = zeros((len(m)), dtype = int)
for i in range(len(m)):
	for j in range(len(m)):
		v[j]= m[j][i]
		v = sorted(v, reverse = True)
		for j in range(len(m)):
			m[j][i] = v[j]
print(m)
		
		
	
		

		
-- ERROR:
File "XXXX", line 3
    m = array(eval(input(m:)))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:31:55) 
-- CODE:
from numpy import*

m = array(eval(input(m:)))
v = zeros((len(m)), dtype = int)
for i in range(len(m)):
	for j in range(len(m)):
		v[j]= m[j][i]
		v = sorted(v, reverse = True)
		for j in range(len(m)):
			m[j][i] = v[j]
print(m)
		
		
	
		

		
-- ERROR:
File "XXXX", line 3
    m = array(eval(input(m:)))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:31:55) 
-- CODE:
from numpy import*

m = array(eval(input(m:)))
v = zeros((len(m)), dtype = int)
for i in range(len(m)):
	for j in range(len(m)):
		v[j]= m[j][i]
		v = sorted(v, reverse = True)
		for j in range(len(m)):
			m[j][i] = v[j]
print(m)
		
		
	
		

		
-- ERROR:
File "XXXX", line 3
    m = array(eval(input(m:)))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 10:31:56) 
-- CODE:
from numpy import*

m = array(eval(input(m:)))
v = zeros((len(m)), dtype = int)
for i in range(len(m)):
	for j in range(len(m)):
		v[j]= m[j][i]
		v = sorted(v, reverse = True)
		for j in range(len(m)):
			m[j][i] = v[j]
print(m)
		
		
	
		

		
-- EXECUTION TIME:
0.577375
-- ERROR:
  File "/home/codebench/codes/1838/2603/main.py", line 3
    m = array(eval(input(m:)))
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 10:31:58) 
-- CODE:
from numpy import*

m = array(eval(input(m:)))
v = zeros((len(m)), dtype = int)
for i in range(len(m)):
	for j in range(len(m)):
		v[j]= m[j][i]
		v = sorted(v, reverse = True)
		for j in range(len(m)):
			m[j][i] = v[j]
print(m)
		
		
	
		

		
-- EXECUTION TIME:
0.663762
-- ERROR:
  File "/home/codebench/codes/1838/2603/main.py", line 3
    m = array(eval(input(m:)))
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 10:31:59) 
-- CODE:
from numpy import*

m = array(eval(input(m:)))
v = zeros((len(m)), dtype = int)
for i in range(len(m)):
	for j in range(len(m)):
		v[j]= m[j][i]
		v = sorted(v, reverse = True)
		for j in range(len(m)):
			m[j][i] = v[j]
print(m)
		
		
	
		

		
-- EXECUTION TIME:
0.475365
-- ERROR:
  File "/home/codebench/codes/1838/2603/main.py", line 3
    m = array(eval(input(m:)))
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:33:29) 
-- CODE:
from numpy import*

m = array(eval(input(m:)))
v = zeros((len(m)), dtype = int)
for i in range(len(m)):
	for j in range(len(m)):
		v[j]= m[j][i]
		v = sorted(v, reverse = True)
		for j in range(len(m)):
			m[j][i] = v[j]
print(m)
		
		
	
		

		
-- ERROR:
File "XXXX", line 3
    m = array(eval(input(m:)))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:33:57) 
-- CODE:
from numpy import*

m = array(eval(input(M:)))
v = zeros((len(m)), dtype = int)
for i in range(len(m)):
	for j in range(len(m)):
		v[j]= m[j][i]
		v = sorted(v, reverse = True)
		for j in range(len(m)):
			m[j][i] = v[j]
print(m)
		
		
	
		

		
-- ERROR:
File "XXXX", line 3
    m = array(eval(input(M:)))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:34:04) 
-- CODE:
from numpy import*

m = array(eval(input()))
v = zeros((len(m)), dtype = int)
for i in range(len(m)):
	for j in range(len(m)):
		v[j]= m[j][i]
		v = sorted(v, reverse = True)
		for j in range(len(m)):
			m[j][i] = v[j]
print(m)
		
		
	
		

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 10:34:11) 
-- CODE:
from numpy import*

m = array(eval(input()))
v = zeros((len(m)), dtype = int)
for i in range(len(m)):
	for j in range(len(m)):
		v[j]= m[j][i]
		v = sorted(v, reverse = True)
		for j in range(len(m)):
			m[j][i] = v[j]
print(m)
		
		
	
		

		
-- EXECUTION TIME:
1.13126
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[1 1 1 1]
 [0 0 0 0]
 [0 0 0 0]
 [0 0 0 0]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 1 1 3]
 [0 0 0 0]
 [0 0 0 0]
 [0 0 0 0]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:34:15) 
-- CODE:
from numpy import*

m = array(eval(input()))
v = zeros((len(m)), dtype = int)
for i in range(len(m)):
	for j in range(len(m)):
		v[j]= m[j][i]
		v = sorted(v, reverse = True)
		for j in range(len(m)):
			m[j][i] = v[j]
print(m)
		
		
	
		

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:37:17) 
-- CODE:
from numpy import*
m = array(eval(input()))
for j in range(4):
	v = zeros(4)
	k = 0
	for i in range(4):
		v(k)=m[i,j]
		k = k+1
	v = sorted(v,reverse = True)
	k=0
	for i in range(4):
		m[i,j] = v[k]
		k = k+1
print(m)
		
	
		

		
-- ERROR:
File "XXXX", line 7
    v(k)=m[i,j]
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:38:03) 
-- CODE:
from numpy import*
m = array(eval(input()))
for j in range(4):
	v = zeros(4)
	k = 0
	for i in range(4):
		v(k)=m[i][j]
		k = k+1
	v = sorted(v,reverse = True)
	k=0
	for i in range(4):
		m[i][j] = v[k]
		k = k+1
print(m)
		
	
		

		
-- ERROR:
File "XXXX", line 7
    v(k)=m[i][j]
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:38:24) 
-- CODE:
from numpy import*
m = array(eval(input()))
for j in range(4):
	v = zeros(4)
	k = 0
	for i in range(4):
		v(k)=m[i,j]
		k = k+1
	v = sorted(v,reverse = True)
	k=0
	for i in range(4):
		m[i,j] = v[k]
		k = k+1
print(m)
		
	
		

		
-- ERROR:
File "XXXX", line 7
    v(k)=m[i,j]
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 10:38:29) 
-- CODE:
from numpy import*
m = array(eval(input()))
for j in range(4):
	v = zeros(4)
	k = 0
	for i in range(4):
		v(k)=m[i,j]
		k = k+1
	v = sorted(v,reverse = True)
	k=0
	for i in range(4):
		m[i,j] = v[k]
		k = k+1
print(m)
		
	
		

		
-- EXECUTION TIME:
0.724711
-- ERROR:
  File "/home/codebench/codes/1838/2603/main.py", line 7
    v(k)=m[i,j]
     ^
SyntaxError: can't assign to function call

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:38:35) 
-- CODE:
from numpy import*
m = array(eval(input()))
for j in range(4):
	v = zeros(4)
	k = 0
	for i in range(4):
		v(k)=m[i,j]
		k = k+1
	v = sorted(v,reverse = True)
	k=0
	for i in range(4):
		m[i,j] = v[k]
		k = k+1
print(m)
		
	
		

		
-- ERROR:
File "XXXX", line 7
    v(k)=m[i,j]
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:38:51) 
-- CODE:
from numpy import*
m = array(eval(input()))
for j in range(4):
	v = zeros(4)
	k = 0
	for i in range(4):
		v[k]=m[i,j]
		k = k+1
	v = sorted(v,reverse = True)
	k=0
	for i in range(4):
		m[i,j] = v[k]
		k = k+1
print(m)
		
	
		

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 10:38:55) 
-- CODE:
from numpy import*
m = array(eval(input()))
for j in range(4):
	v = zeros(4)
	k = 0
	for i in range(4):
		v[k]=m[i,j]
		k = k+1
	v = sorted(v,reverse = True)
	k=0
	for i in range(4):
		m[i,j] = v[k]
		k = k+1
print(m)
		
	
		

		
-- EXECUTION TIME:
0.747363
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
